first version of 1.1.0